# lumius-projeto

./: .gitignore  .gitignore.bak  README.md  README_RPI4.md  REMOTE_CONTROL_INSTRUCTIONS.txt  SSH_INSTRUCTIONS.md  install_deps_rpi4.sh  lumius_launcher.py  lumius_splash.sh  lumius_ssh.sh  remote_control.sh  restore_desktop.sh  rpi_monitor.sh  rpi_setup.sh  setup_remote_control.sh  ssh_setup.sh
assets/music/: README.md
control-app/: README.md  README_REMOTE.md  control_panel.py  control_panel_remote.py
openframeworks-visualizer/: Makefile  config.make  run_with_audio.sh
openframeworks-visualizer/src/: main.cpp  ofApp.cpp  ofApp.h
pico-firmware/: CMakeLists.txt  build.sh  quadrature_encoder.c
